--- a/CooksBlog/Web.config
+++ b/CooksBlog/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="TimezoneAbbr" value="cst"/>
+    <add key="Timezone" value="Central Standard Time"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -38,15 +40,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="CooksBlogDbConnString" connectionString="Data Source=(local)\SQLExpress;Initial Catalog=CooksBlog;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="CooksBlogDbConnString"
-         connectionString="Data Source=(local)\SQLExpress;Initial Catalog=HomeOnTheRange.Models.TheRangeDataContext;Integrated Security=True"
-         providerName="System.Data.SqlClient"/>
-  </connectionStrings>
 </configuration>
