--- a/CooksBlog/CooksBlog.csproj
+++ b/CooksBlog/CooksBlog.csproj
@@ -113,7 +113,6 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\themes\admin.css" />
     <Content Include="Content\themes\basic\admin.css" />
     <Content Include="Content\themes\basic\images\banner.jpg" />
     <Content Include="Content\themes\basic\images\bullet.png" />
@@ -125,7 +124,6 @@
     <Content Include="Content\themes\basic\images\side_base.png" />
     <Content Include="Content\themes\basic\images\side_top.png" />
     <Content Include="Content\themes\basic\style.css" />
-    <Content Include="Content\themes\style.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -146,12 +144,14 @@
   <ItemGroup>
     <Compile Include="ActionLinkExtensions.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Models\ListViewModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\WidgetViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -171,6 +171,7 @@
     <Content Include="Views\Shared\_Categories.cshtml" />
     <Content Include="Views\Shared\_Tags.cshtml" />
     <Content Include="Views\Shared\_LatestPosts.cshtml" />
+    <Content Include="Views\Admin\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
