--- a/CooksBlog/Web.Debug.config
+++ b/CooksBlog/Web.Debug.config
@@ -15,6 +15,13 @@
     </connectionStrings>
   -->
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="password"/>
+        </credentials>
+      </forms>
+    </authentication>
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
